--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 logging.level.org.springframework.web=DEBUG
 server.port = 8081
+server.error.include-message = always
+server.error.include-binding-errors = always
