--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
             <version>0.11.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 
