--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
+            <version>2.3.11.RELEASE</version>
         </dependency>
 
         <dependency>
